<resources>
    <string name="app_name">VachesDeFrance</string>
    <string name="Challenge">Challenge</string>
    <string name="Train">Encyclopédie</string>
    <string name="j1"><![CDATA[Challenge Caractéristiques]]></string>
    <string name="j2"><![CDATA[Challenge Photo]]></string>
    <string name="Titre">Les Vaches de France</string>
    <string name="quitter_challenge">Quitter</string>
    <string name="score">Score : </string>
    <string name="content_description">ceci est une image de vache</string>
    <string name="quitter">Quitter</string>
    <string name="scores">Scores</string>
    <string name="retour">Retour</string>
    <string name="region"><u>Région :</u></string>
    <string name="type"><u>Type :</u></string>
    <string name="best_score">Meilleurs scores</string>
    <string name="carac">Caractéristiques</string>
    <string name="photo">Photographie</string>
    <string name="niv_select">Sélection du mode</string>

    <!--Result Activity Menu-->
    <string name="result_activity_menu_score">Score</string>
    <string name="result_activity_menu_time">Temps</string>

    <!--Title action bar-->
    <string name="title_app_bar_scores">Meilleurs scores</string>
    <string name="title_app_bar_entrainment">Entrainement</string>
    <string name="title_app_bar_challenge_mode_choice">Sélection du mode</string>
    <string name="title_app_bar_challenge_lvl_choice">Challenge</string>
    <string name="title_app_bar_challenge_cara">Challenge caractéristiques</string>
    <string name="title_app_bar_challenge_photo">Challenge photos</string>
    <string name="pr_bestscore">Pourcentages de réussite</string>
    <string name="switch_to_mt">Passer aux meilleurs temps</string>
    <string name="mt_bestscore">Meilleurs temps</string>
    <string name="switch_to_pr">Passer au pourcentages de réussite</string>
    <string name="classement">…</string>
</resources>